[gd_scene load_steps=31 format=3 uid="uid://bj07chsq22oxo"]

[ext_resource type="Script" path="res://scripts/enemies/enemy_5.gd" id="1_reed3"]
[ext_resource type="Texture2D" uid="uid://cvuw7bnmcfr3h" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Attack_000.png" id="2_mh5ig"]
[ext_resource type="Texture2D" uid="uid://coedjsisb2d50" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Attack_001.png" id="3_ghtcs"]
[ext_resource type="Texture2D" uid="uid://dyj2p55kkk3di" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Attack_002.png" id="4_5m3xt"]
[ext_resource type="Texture2D" uid="uid://dffwx5sfmyhxi" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Attack_003.png" id="5_nwv4y"]
[ext_resource type="Texture2D" uid="uid://dnig36bna53qx" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Attack_004.png" id="6_kfp4p"]
[ext_resource type="Texture2D" uid="uid://dmjvq6vpydase" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Attack_005.png" id="7_5prag"]
[ext_resource type="Texture2D" uid="uid://dl7agf5l36mlo" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Attack_006.png" id="8_yl6lk"]
[ext_resource type="Texture2D" uid="uid://btiyueib7unoj" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Attack_007.png" id="9_61wsg"]
[ext_resource type="Texture2D" uid="uid://bt4eppuwkh7ns" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Die_000.png" id="10_awtrq"]
[ext_resource type="Texture2D" uid="uid://bhkhiafj0sthu" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Die_001.png" id="11_ag0sn"]
[ext_resource type="Texture2D" uid="uid://binlp8k5to0ju" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Die_002.png" id="12_kvr2x"]
[ext_resource type="Texture2D" uid="uid://4mcmyrgcos8l" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Die_003.png" id="13_32tci"]
[ext_resource type="Texture2D" uid="uid://d3p26k2ea2xpg" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Die_004.png" id="14_ontky"]
[ext_resource type="Texture2D" uid="uid://dxi13vn0h0wm1" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Die_005.png" id="15_n27ul"]
[ext_resource type="Texture2D" uid="uid://cv2g0nh4urmct" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Die_006.png" id="16_7lum5"]
[ext_resource type="Texture2D" uid="uid://gsmtpc2n805p" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Die_007.png" id="17_yhlcp"]
[ext_resource type="Texture2D" uid="uid://4gtp2o1bw33g" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Die_008.png" id="18_nynsb"]
[ext_resource type="Texture2D" uid="uid://cojx2osy4p8qv" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Die_009.png" id="19_bfi6c"]
[ext_resource type="Texture2D" uid="uid://biket1v4w4xl" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Run_000.png" id="20_nbl5g"]
[ext_resource type="Texture2D" uid="uid://bwf33fxdgnlav" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Run_001.png" id="21_2fdx5"]
[ext_resource type="Texture2D" uid="uid://bto4hnmx2itqq" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Run_002.png" id="22_i2r23"]
[ext_resource type="Texture2D" uid="uid://ctxoqqv1wvomd" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Run_003.png" id="23_c4lhw"]
[ext_resource type="Texture2D" uid="uid://cyhke3uot7tr7" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Run_004.png" id="24_hkmnr"]
[ext_resource type="Texture2D" uid="uid://brnctqid4mjpu" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Run_005.png" id="25_v04xj"]
[ext_resource type="Texture2D" uid="uid://curmkf8q62yk2" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Run_006.png" id="26_dqhac"]
[ext_resource type="Texture2D" uid="uid://br2mosp7hgthh" path="res://assets/enemys/3-Monster Character Sprites  (2)/Character Sprites/Character-2/Run_007.png" id="27_3djgn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5iivs"]
radius = 7.01783

[sub_resource type="SpriteFrames" id="SpriteFrames_1qegl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mh5ig")
}, {
"duration": 1.0,
"texture": ExtResource("3_ghtcs")
}, {
"duration": 1.0,
"texture": ExtResource("4_5m3xt")
}, {
"duration": 1.0,
"texture": ExtResource("5_nwv4y")
}, {
"duration": 1.0,
"texture": ExtResource("6_kfp4p")
}, {
"duration": 1.0,
"texture": ExtResource("7_5prag")
}, {
"duration": 1.0,
"texture": ExtResource("8_yl6lk")
}, {
"duration": 1.0,
"texture": ExtResource("9_61wsg")
}],
"loop": true,
"name": &"attack1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_awtrq")
}, {
"duration": 1.0,
"texture": ExtResource("11_ag0sn")
}, {
"duration": 1.0,
"texture": ExtResource("12_kvr2x")
}, {
"duration": 1.0,
"texture": ExtResource("13_32tci")
}, {
"duration": 1.0,
"texture": ExtResource("14_ontky")
}, {
"duration": 1.0,
"texture": ExtResource("15_n27ul")
}, {
"duration": 1.0,
"texture": ExtResource("16_7lum5")
}, {
"duration": 1.0,
"texture": ExtResource("17_yhlcp")
}, {
"duration": 1.0,
"texture": ExtResource("18_nynsb")
}, {
"duration": 1.0,
"texture": ExtResource("19_bfi6c")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_nbl5g")
}, {
"duration": 1.0,
"texture": ExtResource("21_2fdx5")
}, {
"duration": 1.0,
"texture": ExtResource("22_i2r23")
}, {
"duration": 1.0,
"texture": ExtResource("23_c4lhw")
}, {
"duration": 1.0,
"texture": ExtResource("24_hkmnr")
}, {
"duration": 1.0,
"texture": ExtResource("25_v04xj")
}, {
"duration": 1.0,
"texture": ExtResource("26_dqhac")
}, {
"duration": 1.0,
"texture": ExtResource("27_3djgn")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_t5d87"]
radius = 291.507

[node name="enemy_5" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_reed3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 5.5)
shape = SubResource("CircleShape2D_5iivs")

[node name="Visuals" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals"]
position = Vector2(1.19209e-07, 4.76837e-07)
scale = Vector2(0.0651786, 0.0673214)
sprite_frames = SubResource("SpriteFrames_1qegl")
animation = &"die"

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(1.19209e-07, 4.76837e-07)
scale = Vector2(0.0651786, 0.0673214)
collision_layer = 3
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-1.82896e-06, 59.4165)
shape = SubResource("CircleShape2D_t5d87")

[node name="AttackHero" type="Timer" parent="."]
autostart = true

[node name="AttackBase" type="Timer" parent="."]

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="AttackHero" to="." method="_on_attack_hero_timeout"]
[connection signal="timeout" from="AttackBase" to="." method="_on_attack_base_timeout"]
